--- a/docs/use-the-network/devices/ready-to-use/ready-to-use.mdx
+++ b/docs/use-the-network/devices/ready-to-use/ready-to-use.mdx
@@ -134,6 +134,11 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 			<a href="/use-the-network/devices/ready-to-use/nwave/nps310sm"> View Devices <img className="linkarrow" src={useBaseUrl("img/icons/linkarrow.svg")} /></a>
 	    </div>
 		<div class="col col--6"  style={{marginBottom: 100}}>
+	    	<a href="/use-the-network/devices/ready-to-use/rakwireless/rak7204"><img className="manufacturericon" src={useBaseUrl("img/use-the-network/devices/ready-to-use/rakwireless/rakwireless.svg")} /></a>
+			<p></p>
+			<a href="/use-the-network/devices/ready-to-use/rakwireless/rak7204"> View Devices <img className="linkarrow" src={useBaseUrl("img/icons/linkarrow.svg")} /></a>
+	    </div>
+		<div class="col col--6"  style={{marginBottom: 100}}>
 	    	<a href="/use-the-network/devices/ready-to-use/seeed-studio/sensecap-soil-th"><img className="manufacturericon" src={useBaseUrl("img/use-the-network/devices/ready-to-use/seeed-studio/seeed-studio-logo.webp")} /></a>
 			<p></p>
 			<a href="/use-the-network/devices/ready-to-use/seeed-studio/sensecap-soil-th"> View Devices <img className="linkarrow" src={useBaseUrl("img/icons/linkarrow.svg")} /></a>
