--- a/docs/api/blockchain/hotspots.mdx
+++ b/docs/api/blockchain/hotspots.mdx
@@ -2092,7 +2092,7 @@ _Query Parameters_
 | ------------------- | -------- | -------------------------------------- |
 | max_time (required) | _string_ | Last timestamp to include rewards for  |
 | min_time (required) | _string_ | First timestamp to include rewards for |
-| bucket (optional) | _string_ | Get Data in Special Bucket ( hour / month / week ) |
+| bucket (optional) | _string_ | Get data in buckets ( hour / month / week ) |
 
 </TabItem>
 <TabItem value="response">
