Added references to validator status page (#766)
* Add validator status page reference

* Add validator status page reference

* Update docs/mine-hnt/validators/monitoring.mdx

Co-authored-by: Mark Phillips <msphillenator+github@gmail.com>

* Update docs/mine-hnt/validators/monitoring.mdx

Co-authored-by: Mark Phillips <msphillenator+github@gmail.com>

* Update docs/mine-hnt/validators/mainnet/deployment-guide.mdx

Co-authored-by: Mark Phillips <msphillenator+github@gmail.com>

Co-authored-by: Mark Phillips <msphillenator+github@gmail.com>

--- a/docs/mine-hnt/validators/mainnet/deployment-guide.mdx
+++ b/docs/mine-hnt/validators/mainnet/deployment-guide.mdx
@@ -565,4 +565,6 @@ Head over to the [Validator Mainnet Explorer](https://explorer.helium.com/valida
 ### Troubleshooting Guide
 If your validator does not show online in Explorer after 24 hours, view the [Validator Troubleshooting Guide](https://docs.helium.com/mine-hnt/validators/troubleshooting) here.
 
+Visit the [Helium Validator Status Page](http://validators-status.helium.com) (and sign up for alerts, if you haven't already). This status page will provide the latest updates on important issues that impact validators like chain halts or other major events.
+
 Thank you for being a part of the Helium Validators initiative.
