--- a/docs/mine-hnt/validators/monitoring.mdx
+++ b/docs/mine-hnt/validators/monitoring.mdx
@@ -9,6 +9,12 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 
 The Docker commands will assume you have the same prefix to get you executing a command within the docker: ```docker exec validator``` . If you want to make it easier, you can always create an alias such as: ```alias miner="docker exec validator miner"```.
 
+## Confirm the network is working
+
+Visit the [Helium Validator Status Page](http://validators-status.helium.com) (and sign up for alerts, if you haven't already).
+
+This status page will provide the latest updates on important issues that impact validators like chain halts or other major events.
+
 ## Check the p2p network
 
 Perform a health check to see if your validator node can see other validators. 
