trimmed file extension from reference link

--- a/docs/use-the-network/devices/development/arduino/lora-vision-shield/lora-vision-shield.mdx
+++ b/docs/use-the-network/devices/development/arduino/lora-vision-shield/lora-vision-shield.mdx
@@ -33,12 +33,12 @@ for Always-on vision devices and applications.
 
 ### Firmware Quickstart Guides
 
-- [Arduino Guide](/use-the-network/devices/development/arduino/lora-vision-shield/arduino.mdx)
-
+- [Arduino Guide](/use-the-network/devices/development/arduino/lora-vision-shield/arduino)
 
 ### Video Guides
 
-- [Community Tutorial Video](https://www.youtube.com/watch?v=wt_WZ1sBDeM&list=PL57Dnr1H_eguoFKLWY0nLMz0QI3nyQVmQ&index=12) The easier but less flexible MQTT Adafruit connection.
+- [Community Tutorial Video](https://www.youtube.com/watch?v=wt_WZ1sBDeM&list=PL57Dnr1H_eguoFKLWY0nLMz0QI3nyQVmQ&index=12)
+  The easier but less flexible MQTT Adafruit connection.
 
 ### Specifications
 
@@ -46,7 +46,6 @@ for Always-on vision devices and applications.
 
 - sound (dual microphones)
 - vision
-
 
 #### Dimensions:
 
