--- a/docs/use-the-network/devices/ready-to-use/rakwireless/rak7204.mdx
+++ b/docs/use-the-network/devices/ready-to-use/rakwireless/rak7204.mdx
@@ -1,16 +1,12 @@
 ---
 id: rak7204
-hide_title: true
 sidebar_label: RAK7204 WisNode Sense Home
 title: RAK7204 WisNode Sense Home
-description: RAK7204 comes in a compact size that serves as an environmental monitoring statiof. With its high-precision sensors, it can measure changes in temperature, humidity, gas pressure, and indoor air quality. All the accumulated data can be sent to the gateway and then forward it to the Cloud.
+description: RAK7204 comes in a compact size that serves as an environmental monitoring station. With its high-precision sensors, it can measure changes in temperature, humidity, gas pressure, and indoor air quality. All the accumulated data can be sent to the gateway and then forward it to the Cloud.
 slug: /use-the-network/devices/ready-to-use/rakwireless/rak7204
 ---
 
-
 import useBaseUrl from "@docusaurus/useBaseUrl";
-
-# RAK7204 WisNode Sense Home
 
 <img
   src={useBaseUrl(
@@ -18,8 +14,10 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
   )}
 />
 
-The RAK7204 WisNode Sense Home is an LPWAN node with integrated environmental sensors. The high-precision environmental sensors, can measure changes in temperature, humidity, gas pressure and provide an indoor air quality index. All the accumulated data can be send to a gateway in order for it to be forwarded to the Cloud.
 ## Overview
+
+The RAK7204 WisNode Sense Home is an LPWAN node with integrated environmental sensors. The high-precision environmental sensors, can measure changes in temperature, humidity, gas pressure and provide an indoor air quality index. All the accumulated data can be send to a gateway in order for it to be forwarded to the Cloud.
+
 
 ### Product Features
 
