--- a/docs/mine-hnt/validators/troubleshooting.mdx
+++ b/docs/mine-hnt/validators/troubleshooting.mdx
@@ -100,8 +100,9 @@ This also works for your Validator 2154 port, just swap it in for the 8080 above
     approximately every 60s.
   - Note: If you just loaded a snapshot or upgraded the miner version, absorb times may be higher
     than usual, so wait several hours before determining your average absorb time.
- - Consider migrating to the debian validator package from the [Mainnet Deployment Guide](https://docs.helium.com/mine-hnt/validators/mainnet/deployment-guide/#:~:text=Deploy%20the%20Validator%20from%20deb%20package) to further reduce validation times.  
-
+- Consider migrating to the debian validator package from the
+  [Mainnet Deployment Guide](https://docs.helium.com/mine-hnt/validators/mainnet/deployment-guide/#:~:text=Deploy%20the%20Validator%20from%20deb%20package)
+  to further reduce validation times.
 
 ## Validator low disk space
 
@@ -224,7 +225,6 @@ Grafana).
 - Slow disk write speeds: do your disk write speeds exceed 4ms/op (not a fixed line, just a level
   where "you could get dinged")? See if you can improve disk quality.
 - Other metrics: memory usage, disk volume, disk i/o, write latency
-
 
 If you don't have a metrics dashboard and think a non-luck element may have caused your penalty,
 please set up metrics monitoring.
