--- a/docs/use-the-network/use-the-network.mdx
+++ b/docs/use-the-network/use-the-network.mdx
@@ -4,11 +4,9 @@ hide_title: true
 sidebar_label: Introduction
 slug: /use-the-network
 hide_table_of_contents: true
-
 ---
 
-import useBaseUrl from "@docusaurus/useBaseUrl";
-
+import useBaseUrl from '@docusaurus/useBaseUrl'
 
 <div class="container" style={{padding: 0, marginBottom: 60}}>
 	<div class="row">
@@ -21,26 +19,25 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 			<div>
 				<a href="/use-the-network/devices/ready-to-use/"><span class="badge badge--secondary">Helium-enabled Devices</span></a>
 				<a href="/use-the-network/console/quickstart"><span class="badge badge--secondary">Console Explained</span></a>
-				<a href="/use-the-network/community-projects#dashboards"><span class="badge badge--secondary">Dashboard Projects</span></a>	
+				<a href="/use-the-network/community-projects#dashboards"><span class="badge badge--secondary">Dashboard Projects</span></a>
 			</div>
                 </div>
             </div>
         </div>
 	</div>
 </div>
-
-
-
-<div style={{padding: '0px 0 50px'}}>
+<div>
 
 :::info
-[Helium Discord](https://discord.gg/helium) is the best place to get real-time support from the community. And the [#console](discord://discord.com/channels/404106811252408320/730245319882965093) and [#sensor-dev](discord://discord.com/channels/404106811252408320/730246602861838467)
-channels are the two most relevant for developers using the Network. 
+
+[Helium Discord](https://discord.gg/helium) is the best place to get real-time support from the
+community. And the [#console](discord://discord.com/channels/404106811252408320/730245319882965093)
+and [#sensor-dev](discord://discord.com/channels/404106811252408320/730246602861838467) channels are
+the two most relevant for developers using the Network.
+
 :::
 
 </div>
-
-
 <div class="container" style={{padding: 0}}>
 	<div class="row">
 	    <div class="col col--6"  style={{marginBottom: 100}}>
@@ -49,7 +46,6 @@ channels are the two most relevant for developers using the Network.
 	    	<p className="podtext">Purchase and customize Helium-enabled devices or prototype and build your own.</p>
 	    	<h5>Quick Links</h5>
 	    	<a className="block" href="/use-the-network/devices/"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Devices</a>
-	   
 	    </div>
 	    <div class="col col--6 " style={{marginBottom: 100}}>
 	   		<img className="homeicon" style={{maxWidth: 85}} src={useBaseUrl("img/use-the-network/use2.svg")} />
@@ -63,7 +59,6 @@ channels are the two most relevant for developers using the Network.
 			<a className="block" href="/use-the-network/console/labels"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Labels</a>
 	    	<a className="block" href="/use-the-network/console/integrations"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Integrations</a>
 			<a className="block" href="/use-the-network/console/api"><img className="docicon" src={useBaseUrl("img/icons/docicon.svg")} /> Console API</a>
-	
 	    </div>
 	    <div class="col col--6"  style={{marginBottom: 100}}>
 		    <img className="homeicon" style={{maxWidth: 85}} src={useBaseUrl("img/use-the-network/use3.svg")} />
@@ -88,4 +83,3 @@ channels are the two most relevant for developers using the Network.
 	    </div>
   	</div>
 </div>
-
