--- a/docs/mine-hnt/validators/testnet/test-cases.mdx
+++ b/docs/mine-hnt/validators/testnet/test-cases.mdx
@@ -5,22 +5,23 @@ sidebar_label: Test Cases
 slug: /mine-hnt/validators/testnet/test-cases
 ---
 
-import useBaseUrl from "@docusaurus/useBaseUrl";
+import useBaseUrl from '@docusaurus/useBaseUrl'
 
 Perform the following test cases to help with testing:
 
-* Set up a wallet
-* Set up a validator node
-* Stake testnet network tokens (TNT) 
-* Observe wallet receives rewards
-* Unstake TNT, observe:
-    * no longer in consensus group
-    * no longer receiving rewards
-* Take validator offline
-    * prior to consensus group
-    * during consensus group
-* Restake owner wallet
-* Transfer ownership of stake to different validator node (same wallet, different wallet)
-* Set up wallet tied to multiple validator nodes
+- Set up a wallet
+- Set up a validator node
+- Stake testnet network tokens (TNT)
+- Observe wallet receives rewards
+- Unstake TNT, observe:
+  - no longer in consensus group
+  - no longer receiving rewards
+- Take validator offline
+  - prior to consensus group
+  - during consensus group
+- Restake owner wallet
+- Transfer ownership of stake to different validator node (same wallet, different wallet)
+- Set up wallet tied to multiple validator nodes
 
-Use the [#validator](discord://discord.com/channels/404106811252408320/857353417739730954) channel on our [Discord](https://discord.gg/helium) server to provide feedback and report issues.
+Use the [#validator](discord://discord.com/channels/404106811252408320/857353417739730954) channel
+on our [Discord](https://discord.gg/helium) server to provide feedback and report issues.
