--- a/docs/troubleshooting/replace-sd-card.mdx
+++ b/docs/troubleshooting/replace-sd-card.mdx
@@ -7,33 +7,34 @@ slug: /troubleshooting/replace-sd-card
 
 # Replacing SD Card
 
-import useBaseUrl from "@docusaurus/useBaseUrl";
+import useBaseUrl from '@docusaurus/useBaseUrl'
 
 Required Tools:
 
 - Phillips Head or T8 bit screwdriver
 - Strong fingernails, tweezers, or needle-nose pliers to remove the old SD card
-- The ability to read/write a 64gb microSD card (unless pre-flashed card is
-  acquired)
+- The ability to read/write a 64gb microSD card (unless pre-flashed card is acquired)
 
-In the event that your microSD card fails, here are the steps to re-flash it or
-replace it with a brand new one:
+In the event that your microSD card fails, here are the steps to re-flash it or replace it with a
+brand new one:
 
-1. Unplug and remove the 4 screws from the bottom of the unit using a Phillips
-   head screwdriver (Note that 1st gen Hotspots will need a T8 bit screwdriver,
-   and also have a gps antenna wire attaching the top plastic to the board, this
-   should stay connected.)
-2. Carefully remove the installed microSD card located by the fan - tweezers or
-   needle-nose pliers may help with this. (see image below)
-   <img src={useBaseUrl("img/troubleshooting/hotspot-sd-card.jpg")} />
+1. Unplug and remove the 4 screws from the bottom of the unit using a Phillips head screwdriver
+   (Note that 1st gen Hotspots will need a T8 bit screwdriver, and also have a gps antenna wire
+   attaching the top plastic to the board, this should stay connected.)
+2. Carefully remove the installed microSD card located by the fan - tweezers or needle-nose pliers
+   may help with this. (see image below)
+   <img src={useBaseUrl('img/troubleshooting/hotspot-sd-card.jpg')} />
 3. Format the new card or re-format the existing card into ExFat format.
 4. Download and install a program to Flash the card such as Etcher, if needed:
    https://www.balena.io/etcher
-5. Download the firmware image file to Flash. 
-    Note: Since 24 Jan 2022 the Firmware and Miner Images are now separated, and can have different date releases
-    Replace the `date` part of the following URL with the latest GA tagged >>FIRMWARE<< release in the Community Discord's [#announcements](discord://discord.com/channels/404106811252408320/730418759298318346) channel. 
-    i.e. new firmware date of `2022.01.24.0` and `https://helium-nextgate.s3-us-west-2.amazonaws.com/artifacts/<date>-sdcard.img.gz` 
-    becomes `https://helium-nextgate.s3-us-west-2.amazonaws.com/artifacts/2022.01.24.0-sdcard.img.gz`and enter that url in your browser
+5. Download the firmware image file to Flash. Note: Since 24 Jan 2022 the Firmware and Miner Images
+   are now separated, and can have different date releases Replace the `date` part of the following
+   URL with the latest GA tagged >>FIRMWARE<< release in the Community Discord's
+   [#announcements](discord://discord.com/channels/404106811252408320/730418759298318346) channel.
+   i.e. new firmware date of `2022.01.24.0` and
+   `https://helium-nextgate.s3-us-west-2.amazonaws.com/artifacts/<date>-sdcard.img.gz` becomes
+   `https://helium-nextgate.s3-us-west-2.amazonaws.com/artifacts/2022.01.24.0-sdcard.img.gz`and
+   enter that url in your browser
 6. Unzip the .gz file.
 7. Use Etcher to Flash the newly formatted microSD card with the file.
 8. Place the newly flashed card back into the card reader slot.
@@ -42,12 +43,11 @@ replace it with a brand new one:
 
 #### If you have purchased a pre-flashed card, the only steps you need are:
 
-1. Unplug and remove the 4 screws from the bottom of the unit using a Phillips
-   head screwdriver (Note that 1st gen Hotspots will need a T8 bit screwdriver,
-   and also have a gps antenna wire attaching the top plastic to the board, this
-   should stay connected.)
-2. Carefully remove the installed microSD card located by the fan - tweezers or
-   needle-nose pliers may help with this. (see image below)
+1. Unplug and remove the 4 screws from the bottom of the unit using a Phillips head screwdriver
+   (Note that 1st gen Hotspots will need a T8 bit screwdriver, and also have a gps antenna wire
+   attaching the top plastic to the board, this should stay connected.)
+2. Carefully remove the installed microSD card located by the fan - tweezers or needle-nose pliers
+   may help with this. (see image below)
 3. Place the pre-flashed card into the card reader slot.
 4. Plug the Hotspot back and and confirm that it boots up.
 5. Screw the Hotspot back together.
@@ -56,6 +56,5 @@ If successful, everything should boot up normally.
 
 A card like
 [this](https://www.amazon.com/gp/product/B07FCMBLV6/ref=ppx_yo_dt_b_asin_title_o06_s00?ie=UTF8&psc=1)
-would work, but anything comparable would also suffice.  
-You can also buy pre-flashed ones from
+would work, but anything comparable would also suffice. You can also buy pre-flashed ones from
 [Parley Labs](https://shop.parleylabs.com/collections/mine-hnt/products/sandisk-64gb-extreme-microsdxc-with-helium-firmware).
