--- a/docs/use-the-network/devices/development/arduino/lora-vision-shield/arduino.mdx
+++ b/docs/use-the-network/devices/development/arduino/lora-vision-shield/arduino.mdx
@@ -155,7 +155,9 @@ MKRWANFWUpdate_standalone make sure you run the serial monitor to fully update t
 />
 
 :::important
-The Install!
+
+The Sketch Install!
+
 :::
 
 
@@ -470,7 +472,7 @@ Once the above sketch is compiled and you have checked the port and loaded the S
 
 :::important
 
-The Helium Console
+The Helium Console: Device, Function, Integration, Flows
 
 :::
 
@@ -517,7 +519,7 @@ Integrations docs [here](/use-the-network/console/integrations).
 
 :::important
 
-Adafruit.io
+Setting up Adafruit.io
 
 :::
 
@@ -658,7 +660,8 @@ Not as important but fun to go to Adafruit dashboard and click the setup icon to
 :::important
 
 MQTT Adafruit with CayenneLPP
-Easier but less flexible
+
+This is easier but less flexible than the main tutorial
 
 :::
 
@@ -920,7 +923,7 @@ void loop() {
 
 :::important
 
-Fails
+Fails, and what to do.
 
 :::
 
