Apply suggestions from code review
Co-authored-by: Mark Phillips <msphillenator+github@gmail.com>

--- a/docs/use-the-network/console/troubleshooting.mdx
+++ b/docs/use-the-network/console/troubleshooting.mdx
@@ -62,7 +62,7 @@ Remember after initial joining:
 
 ### Why aren't downlinks working?
 
-LoRaWAN class A devices require an uplink before they can downlink. According to the LoRaWAN spec a receive window exists for the device to "hear" the downlink. 
-If this window (default 1 second) is missed then the downlink will be unsuccessful. With the Receive Window Delay feature users can 
+LoRaWAN class A devices require an uplink before they can downlink. According to the LoRaWAN spec, a receive window exists for the device to "hear" the downlink. 
+If this window (which defaults to `1` second) is missed then the downlink will be unsuccessful. With the `Receive Window Delay` feature users can 
 increase the window length and address latency issues that can prevent downlinks. More information about how to use profiles to configure the 
-receive window delay for devices and groups [here](https://docs.helium.com/use-the-network/console/profiles/#receive-window-delay).
+receive window delay for devices and groups [can be found here](https://docs.helium.com/use-the-network/console/profiles/#receive-window-delay).
