--- a/docs/use-the-network/devices/development/arduino/lora-vision-shield/arduino.mdx
+++ b/docs/use-the-network/devices/development/arduino/lora-vision-shield/arduino.mdx
@@ -150,7 +150,11 @@ the correct program.
   )}
 />
 
-:::important The Install! :::
+:::important
+
+The Sketch Install!
+
+:::
 
 ### Upload Sketch
 
@@ -453,9 +457,10 @@ should see your unique Device EUI. Copy this value!
   )}
 />
 
+
 :::important
 
-The Helium Console
+The Helium Console: Device, Function, Integration, Flows
 
 :::
 
@@ -512,7 +517,7 @@ to use your device data to build integrations to view your data, visit the Heliu
 
 :::important
 
-Adafruit.io
+Setting up Adafruit.io
 
 :::
 
@@ -652,7 +657,9 @@ want to share them with others who have the shareable link.
 
 :::important
 
-MQTT Adafruit with CayenneLPP Easier but less flexible
+MQTT Adafruit with CayenneLPP
+
+This is easier but less flexible than the main tutorial
 
 :::
 
