--- a/docs/use-the-network/run-a-network-server/run-a-network-server.mdx
+++ b/docs/use-the-network/run-a-network-server/run-a-network-server.mdx
@@ -35,8 +35,8 @@ Before pursuing this configuration though, it is worth considering.
   packets and new accounts start with free 10,000 Data Credits (DC). To go beyond 10 devices check
   out Console Hosting Providers [here](/use-the-network/console/hosting-providers).
 
-- The initial costs to host your own Console is U.S. $900 or 90 million DC (OUI costs 10 million DC, and 80 million DC for the smallest address slab).
-
+- The initial costs to host your own Console is U.S. $900 or 90 million DC (OUI costs 10 million DC,
+  and 80 million DC for the smallest address slab).
 
 :::info
 
