--- a/docs/lorawan-on-helium/lorawan-roaming/lorawan-roaming-on-helium.mdx
+++ b/docs/lorawan-on-helium/lorawan-roaming/lorawan-roaming-on-helium.mdx
@@ -40,7 +40,7 @@ considering the entire global network. If we consider the United States only, fo
 about 95,000 total potential gateways. In practice, only a small percentage of Helium gateways will
 be routing packets for a roaming partner NetID simultaneously.
 
-When the roaming POC is initiated, Helium provide one or more IPs from where the connections will
+When the roaming PoC is initiated, Helium provide one or more IPs from where the connections will
 originate. You will need to supply the IP and port for the host listening for Semtech GWMP
 connections over UDP. Once provided, packets will start arriving at the specified host.
 
