--- a/docs/use-the-network/devices/ready-to-use/rakwireless/rak7204.mdx
+++ b/docs/use-the-network/devices/ready-to-use/rakwireless/rak7204.mdx
@@ -13,7 +13,7 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
     "img/use-the-network/devices/ready-to-use/rakwireless/rak7204/RAK7204.png"
   )}
 />
-
+.
 ## Overview
 
 The RAK7204 WisNode Sense Home is an LPWAN node with integrated environmental sensors. The high-precision environmental sensors, can measure changes in temperature, humidity, gas pressure and provide an indoor air quality index. All the accumulated data can be send to a gateway in order for it to be forwarded to the Cloud.
@@ -44,7 +44,7 @@ The RAK7204 WisNode Sense Home is an LPWAN node with integrated environmental se
 ## Connecting to Helium (The People's Network) 
 
 :::tip
-Before going through each and every step in Connecting the RAK7204 to Helium, it is recommend to check first our [Quick Start Guide](https://docs.rakwireless.com/Product-Categories/WisNode/RAK7204/Quickstart/)
+Before going through each and every step in Connecting the RAK7204 to Helium, it is recommended to check first our [Quick Start Guide](https://docs.rakwireless.com/Product-Categories/WisNode/RAK7204/Quickstart/)
 :::
 
 Helium has quickly become the most widespread LPWAN communal network with more than 27,000 devices deployed globally. All our node products are compatible with it and the process of adding a device to the network is intuitive and straightforward. This section will focus on giving a brief guide on how to connect the RAK7204 to the network console, assuming that there is a Helium Hotspot within range.
