Update troubleshooting.mdx (#894)
* Update troubleshooting.mdx

added link to debian package in mainnet deployment guide; added more info around cpu steal

* formatting fixes

Co-authored-by: Sam Gutentag <developer@samgutentag.com>

--- a/docs/mine-hnt/validators/troubleshooting.mdx
+++ b/docs/mine-hnt/validators/troubleshooting.mdx
@@ -100,6 +100,9 @@ This also works for your Validator 2154 port, just swap it in for the 8080 above
     approximately every 60s.
   - Note: If you just loaded a snapshot or upgraded the miner version, absorb times may be higher
     than usual, so wait several hours before determining your average absorb time.
+- Consider migrating to the debian validator package from the
+  [Mainnet Deployment Guide](https://docs.helium.com/mine-hnt/validators/mainnet/deployment-guide/#:~:text=Deploy%20the%20Validator%20from%20deb%20package)
+  to further reduce validation times.
 
 ## Validator low disk space
 
