Update console-hosting-providers.mdx (#865)
Co-authored-by: Sam Gutentag <developer@samgutentag.com>

--- a/docs/use-the-network/console/console-hosting-providers.mdx
+++ b/docs/use-the-network/console/console-hosting-providers.mdx
@@ -8,16 +8,13 @@ slug: /use-the-network/console/hosting-providers
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
-For demo and educational purposes the Helium Foundation Console is capped at 10 devices and a single
-Organization. Sign up [here](https://console.helium.com/).
+This space provides information about Console Hosting Providers available in the community. Note
+this is not an exhaustive list, and if you’d like to add your company feel free to make a pull
+request: https://github.com/helium/docs
 
-This section provides information about Console Hosting Providers available in the community. Note
-this is not an exhaustive list. If you’d like to add your company feel free to make a pull request:
-https://github.com/helium/docs
+:::info 
 
-:::info
-
-Links and information for these Console Hosting Providers is provided as is.
+Links and information for these Console Hosting Providers is provided as is. 
 
 :::
 
@@ -29,5 +26,8 @@ out to the given provider.
   [here](https://www.helium-iot.eu/use-helium-with-helium-iot-europe/).
 - Ubidots - Power your IoT and cloud applications with Ubidots. Sign up for beta
   [here](https://bit.ly/3JygTvn).
-- Nova Console - contact sales@nova-labs.com
-- BrDot Console - Brazil's Console Hosting Provider. For more information contact sales@brdot.co
+- Foundation Console - For demo and educational purposes. Capped at 10 devices and a single
+  Organization. Sign up [here](https://console.helium.com/).
+- Nova Console - contact sales@nova.xyz.
+- BrDot Console - Console Hosting Provider based in Brazil. For more information contact
+  sales@brdot.co.
