--- a/docs/use-the-network/console/multi-packets.mdx
+++ b/docs/use-the-network/console/multi-packets.mdx
@@ -1,15 +1,61 @@
 ---
 id: multi-packets
-sidebar_label: Multiple Packets
+sidebar_label: Packet Configurations
 slug: /use-the-network/console/multi-packets
 ---
 
-# Multiple Packets
+# Packets Configurations
+
+The Multiple Packets menu has been replaced with Packet Configurations.
+
+Packet Configurations allow users to specify settings that impact packet delivery and includes
+settings for both Multiple Packets and Preferred Hotspots.
+
+:::important
+
+For a Packet Configurations setting, users can either set a Preferred Hotspot or a Multiple Packet
+setting, but not both.
+
+:::
+
+## Preferred Hotspots
+
+With this feature users can designate Hotspots as “Preferred”. If the feature is enabled, packets
+will ONLY be accepted by Hotspots chosen as Preferred. In the Coverage section, Hotspots must be
+followed first before they can be designated as Preferred.
+
+After configured, Packet Configurations can be applied on the Flows workspace at a device/label
+level on the Packets tab.
+
+As this feature is designed for troubleshooting Hotspots or initial Hotspot positioning, the default
+setting is off.
+
+:::warning
+
+This feature is designed for initial Hotspot positioning or troubleshooting. If this feature is
+enabled and a preferred Hotspot cannot send packets, then no packet transfer will occur even if
+other non-Preferred Hotspots are in range.
+
+:::
+
+### How to designate a Preferred Hotspot
+
+The following steps are required to designed Preferred Hotspots:
+
+Step 1: On Coverage choose the desired Hotspot. Hotspots must be first followed before they can be
+chosen as Preferred.
+
+Step 2: On Packet Configuration, choose the Preferred Hotspot settings.
+
+Step 3: On the Flows Workspace, apply the Packet setting to a device or group of devices.
+
+### Multiple Packets
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
-By default, Data Credits are only charged for uplinks. The Multiple Packets feature provides the
-ability to pay for additional packets for redundancy and location triangulation purposes.
+Data Credits are only spent for uplinks including initial join packets. The Multiple Packets feature
+provides the ability to pay for additional packets for redundancy and location triangulation
+purposes.
 
 :::info
 
@@ -18,13 +64,7 @@ To learn more about configuring Multiple Packets, check out our Tips and Tricks 
 
 :::
 
-**Note:** Regardless of the Multiple Packet feature setting, under certain conditions the system
-purchases multiple packets to help ensure successful packet transmission (these cost additional Data
-Credits and happen automatically). These include: initial joining of the device (up to five packets)
-and downlinks that contain data payloads (up to three packets). These additional packets help ensure
-connection reliability to downlink via the Hotspot with the strongest connection.
-
-## Configuring Multiple Packets
+### Configuring Multiple Packets
 
 Configuring multiple packets for a device a group of devices involved two main steps:
 
@@ -32,12 +72,13 @@ Configuring multiple packets for a device a group of devices involved two main s
 
 - Select **Multiple Packets** on the side menu.
 
-{' '}
-<img src={useBaseUrl('img/use-the-network/console/multiple-packets.png')} />
+{" "}
 
-- Click the Add **+** icon.
+<img src={useBaseUrl('img/use-the-network/console/multiple-packets.png')} />- Click the Add **+**
+icon.{' '}
 
-{' '}
+{" "}
+
 <img src={useBaseUrl('img/use-the-network/console/multiple-packets1.png')} />
 
 - Enter a name and choose the desired number of packets.
