--- a/docs/use-the-network/console/alerts.mdx
+++ b/docs/use-the-network/console/alerts.mdx
@@ -13,8 +13,12 @@ integrations including when devices are deleted, or when integrations are update
 
 User types (e.g., Administrator or Managers) can be specified to receive alerts.
 
-For a video walkthrough of how to set up Alerts in Console, check out our Tips & Tricks video
-[here](https://youtu.be/8zt6W_FCQcM).
+:::info
+
+For a video walkthrough of how to configure Alerts in Console, check out our Tips & Tricks video
+[here](https://youtu.be/xv8aM1oNIEs).
+
+:::
 
 ### Configuring Alerts
 
