--- a/docs/use-the-network/console/multi-packets.mdx
+++ b/docs/use-the-network/console/multi-packets.mdx
@@ -57,8 +57,12 @@ Data Credits are only spent for uplinks including initial join packets. The Mult
 provides the ability to pay for additional packets for redundancy and location triangulation
 purposes.
 
-To learn more about enabling Multiple Packets, check out our Tips and Tricks video
-[here](https://youtu.be/rDJcGspnq1A).
+:::info
+
+To learn more about configuring Multiple Packets, check out our Tips and Tricks video
+[here](https://youtu.be/xv8aM1oNIEs).
+
+:::
 
 ### Configuring Multiple Packets
 
