--- a/docs/use-the-network/console/profiles.mdx
+++ b/docs/use-the-network/console/profiles.mdx
@@ -30,8 +30,8 @@ Current settings that can be set via Profiles:
 
 :::info
 
-For a video walkthrough of Configuration Profiles, check out our Tips and Tricks video
-[here](https://youtu.be/U0IHGT_irj8).
+For a video walkthrough of configuring ADR and CF List, check out our Tips and Tricks video
+[here](https://youtu.be/xv8aM1oNIEs).
 
 :::
 
