closed image tag and removed unclosed <br>

--- a/docs/mine-hnt/validators/mainnet/deployment-guide.mdx
+++ b/docs/mine-hnt/validators/mainnet/deployment-guide.mdx
@@ -131,7 +131,7 @@ Performance comparison of three validators on a single 16 vCPU bare metal server
 Bottom line in graph is source build, middle is debian package, top is quay docker image.
 
 <p align="center">
-  <img src="https://cdn.discordapp.com/attachments/857353417739730954/934259908692561990/unknown.png" width="800" title="absorb_and_commit performance metrics">
+  <img src="https://cdn.discordapp.com/attachments/857353417739730954/934259908692561990/unknown.png" width="800" title="absorb_and_commit performance metrics"></img>
 </p>
 
 You only need to do ONE of the following:
@@ -144,7 +144,7 @@ starting at [Enable Firewall on the server](#enable-firewall-on-the-server)
 <details>
   <summary>Deploy the Validator Using Docker</summary>
   <p>
-    <br>
+
 Start by updating your packager manager registry:
 
 ```
@@ -297,7 +297,7 @@ Now that you have your Validator running, you need to [actually Stake tokens to 
 <details>
   <summary>Deploy Validator from Source</summary>
   <p>
-    <br>
+
 Ok, brave soul. Here's what you'll need to build and deploy the miner from source:
 
 - miner
@@ -398,7 +398,7 @@ Note that in the above `miner` command, the `miner` binary here is nested within
 `_build/validator/rel/miner/bin/miner`.
   </p>
 </details>
-<br>
+
 
 After deploying one of the above three options, perform the remaining steps starting here:
 
