--- a/docs/api/console.mdx
+++ b/docs/api/console.mdx
@@ -486,10 +486,7 @@ _Path Parameters_
 200: OK
 
 ```json
-Label {
-    id: "868ea783-f252-4fc4-b724-a155680c0bc9",
-    name: "Blue Label",
-}
+Label deleted
 ```
 
 404: Not Found
@@ -569,7 +566,11 @@ _Path Parameters_
 200: OK
 
 ```json
-Label deleted
+{
+  "id": "868ea783-f252-4fc4-b724-a155680c0bc9",
+  "multi_buy": 1,
+  "name": "Blue Label"
+}
 ```
 
 404: Not Found
